# playwright-training

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.sh  sessions.json  setup.sh  test.sh
.cursor/rules/: project.mdc
src/: config.py  constants.py  main.py  models.py
src/auth/: __init__.py  base.py  browser_manager.py  factory.py  oauth_helper.py
src/auth/2fa/: base.py  manual_handler.py
src/auth/captcha/: __init__.py  base.py  factory.py
src/auth/captcha/solvers/: __init__.py  browserbase_solver.py  manual_solver.py  noop_solver.py
src/auth/providers/: __init__.py  atlassian.py  github.py  google.py  microsoft_365.py  notion.py  okta.py  salesforce.py  slack.py
src/auth/twofa/: __init__.py  base.py  factory.py  handlers.py  pyotp_handler.py
src/browser/: __init__.py  base.py  factory.py  manager.py
src/browser/providers/: __init__.py  browserbase.py  browserbase_provider.py  local_browser.py
src/storage/: __init__.py  base.py  compatibility.py  dynamodb_storage.py  factory.py  mock_storage.py
